# familytree

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  windows.yml
src/: component.rs  main.rs  sample.rs
src/component/: menu.rs  mod.rs
src/templates/: home.html  layout.html
