[package]
name = "familytree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
clap = { version = "4", features = ["derive"] }
dioxus = "0.3.1"
dioxus-ssr = "0.3.0"
petgraph = "0.6.0"
surrealdb = "1.0.0-beta.8"
tokio = { version = "1", features = ["full"] }
