[package]
name = "familytree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.4"
clap = { version = "4", features = ["derive"] }
dioxus = "0.3.1"
dioxus-ssr = "0.3.0"
petgraph = "0.6.0"
serde = { version = "1.0.160", features = ["derive"] }
surrealdb = {version="1.0.0-beta.9", features = ["kv-rocksdb"]}
tokio = { version = "1", features = ["full"] }
