[package]
name = "familytree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = {version="0.6.4", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
dioxus = "0.3.1"
dioxus-ssr = "0.3.0"
dioxus-free-icons = { version = "0.6.0", features = ["hero-icons-outline"] }
petgraph = "0.6.0"
serde = { version = "1.0.160", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
minijinja = "0.34.0"
axum-template = { version = "0.18.0", features = ["minijinja"] }
